<resources>
    <string name="app_name">Anime Buzz</string>
    <string name="label_activity_setup">SetupActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_close">Close</string>
    <string name="last_update_time">lastupdatetime</string>
    <string name="initial_loading_myshows">Getting your currently watching shows from MAL&#8230;</string>
    <string name="initial_loading_season">Downloading the current season info&#8230;</string>
    <string name="mal_username_formatted">malusernameformatted</string>
    <string name="mal_userid">maluserid</string>
    <string name="no_network_available">No network available.</string>
    <string name="remove_failed">There was a problem removing this anime from your MAL list. Please try again later.</string>
    <string name="add_failed">There was a problem adding this anime to your MAL list. Please try again later.</string>
    <string name="user_list_failed">There was a problem getting your MAL list. Please try again later.</string>
    <string name="increment_failed">There was a problem incrementing the episode count.</string>
    <string name="senpai_failed">There was a problem updating anime data.</string>
    <string name="empty_text_myshows">You aren\'t following any shows. Why not check the season browser?</string>
    <string name="empty_text_backlog">You\'re all caught up!</string>
    <string name="empty_text_season">No anime was found.</string>
    <string name="simulcast_anime_network">Anime Network</string>
    <string name="season_not_found">Sorry, that season hasn\'t been loaded yet!</string>
    <string name="activity_running">activityrunning</string>
    <string name="upgraded_to_realm">upgradedtorealm</string>
    <string name="updated_to_v1.3.5">upgradedto135</string>
    <string name="welcome_text">Welcome to Anime Buzz</string>
    <string name="explanation_text">Stay on top of the anime you\'re watching with:</string>
    <string name="bullet">&#8226;</string>
    <string name="benefit_notification_text">Notifications when new episodes air</string>
    <string name="benefit_backlog_text">A backlog of episodes you haven\'t watched yet</string>
    <string name="benefit_browse_text">A season browser to discover and follow new series</string>
    <string name="swipe_left_setup">Swipe left to begin setup</string>
    <string name="mal_sign_in_text">Would you like to sign in to your MyAnimeList account?</string>
    <string name="mal_sign_in_optional_text">(optional)</string>
    <string name="label_username_text">Username:</string>
    <string name="label_password_text">Password:</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_later">(You can sign in later)</string>
    <string name="trying_to_verify">Verifying your credentials, please wait before trying again.</string>
    <string name="already_sign_in">You\'ve already signed in.</string>
    <string name="verification_failed">Your username or password is incorrect. Please try again.</string>
    <string name="verification_successful">Sign in successful!</string>
    <string name="setup_settings_text">A couple of settings&#8230;</string>
    <string name="start_button_text">Start</string>
    <string name="change_later_text">(You can change these later)</string>
    <string name="fragment_myshows">Watching</string>
    <string name="fragment_seasons">Browser</string>
    <string name="fragment_watching_queue">Backlog</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_about">About</string>
    <string name="fragment_export">Export MAL List</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="file_avatar">malavatar.jpg</string>
    <string name="notification_list_update">Downloading off-season anime details&#8230;</string>
    <string name="shared_prefs_logged_in">isuserloggedin</string>
    <string name="shared_prefs_completed_setup">hasusercompletedsetup</string>
    <string name="shared_prefs_latest_season">latestseason</string>
    <string name="shared_prefs_previous_season">previousseason</string>
    <string name="shared_prefs_latest_season_key">latestseasonkey</string>
    <string name="shared_prefs_failed">failedinit</string>
    <string name="shared_prefs_read_external_rationale_shown">readexternalrationaleshown</string>
    <string name="credentials_username">credentialsusername</string>
    <string name="credentials_password">credentialspassword</string>
    <string name="shared_prefs_sorting">usersortingpref</string>
    <string name="pref_account_signed_in_summary">Click to sign out of your MAL account.</string>
    <string name="pref_account_signed_out_title">You are not signed in.</string>
    <string name="pref_account_signed_out_summary">Click to sign in to your MAL account.</string>
    <string name="pref_category_notifications_title">Notifications</string>
    <string name="pref_category_notifications_key">categorynotificationskey</string>
    <string name="pref_category_other_title">Other</string>
    <string name="pref_category_other_key">categoryotherkey</string>
    <string name="pref_simulcast_key">airingorsimulcast</string>
    <string name="pref_simulcast_title">Prefer simulcast times</string>
    <string name="pref_simulcast_off_summary">You will be notified when an episode airs.</string>
    <string name="pref_simulcast_summary">You will be notified when an episode is simulcast.</string>
    <string name="pref_vibrate_key">vibratekey</string>
    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_led_key">ledkey</string>
    <string name="pref_led_title">LED color</string>
    <string name="pref_ringtone_key">ringtonekey</string>
    <string name="pref_ringtone_title">Sound</string>
    <string name="pref_privacy_policy_title">Privacy Policy</string>
    <string name="pref_privacy_policy_key">privacypolicykey</string>
    <string name="pref_changelog_title">Changelog</string>
    <string name="pref_changelog_key">changelogkey</string>
    <string name="pref_category_misc_title">Miscellaneous</string>
    <string name="pref_category_misc_key">categorymisckey</string>
    <string name="pref_english_key">englishkey</string>
    <string name="pref_english_title">Display English titles</string>
    <string name="pref_24hour_key">24hour</string>
    <string name="pref_24hour_title">Display time in 24-hour format</string>
    <string name="pref_24hour_off_summary">Time will be displayed in 12-hour format (AM/PM).</string>
    <string name="pref_24hour_summary">Time will be displayed in 24-hour format.</string>
    <string name="pref_increment_key">incrementkey</string>
    <string name="pref_increment_title">Prompt to increment episode count</string>
    <string name="pref_increment_summary">Prompt will be displayed after swiping item in watching queue. (for MAL)</string>
    <string name="pref_increment_off_summary">Prompt will not be displayed after swiping item in watching queue. (for MAL)</string>
    <string name="pref_firebase_key">firebasekey</string>
    <string name="pref_firebase_title">Report anonymous usage data</string>
    <string name="pref_firebase_summary">Help improve Anime Buzz by automatically reporting anonymous usage data.</string>
    <string name="pref_notification_key">notificationkey</string>
    <string name="pref_notification_title">Enable episode notifications</string>
    <string name="pref_changed_time_notification_key">changednotificationkey</string>
    <string name="pref_changed_time_notification_title">Enable changed airing time notifications</string>
    <string name="pref_category_account_title">Account</string>
    <string name="pref_category_account_key">categoryaccountkey</string>
    <string name="pref_account">prefaccount</string>
    <string name="pref_account_title">MAL Account</string>
    <string name="pref_account_summary_on">You are signed in as \'</string>
    <string name="pref_account_summary_off">You are not signed in.</string>
    <string name="pref_account_cancel">Cancel</string>
    <string name="pref_account_signin_key">signinkey</string>
    <string name="pref_account_signout_key">signoutkey</string>
    <string name="about_senpai"><b>Senpai</b> provides data about anime airing times and other crucial information.</string>
    <string name="about_senpai_url">http://www.senpai.moe</string>
    <string name="about_mal"><b>MyAnimeList</b> allows users to sign in with their MAL accounts to access and update the anime they\'re currently watching.</string>
    <string name="about_mal_url">http://myanimelist.net</string>
    <string name="about_hb"><b>Kitsu</b> provides the images and additional anime details.</string>
    <string name="about_hb_url">https://kitsu.io</string>
    <string name="about_ann"><b>Anime News Network</b> provides the anime images and English titles used in this app.</string>
    <string name="about_ann_url">http://www.animenewsnetwork.com</string>
    <string name="snackbar_export_fail">There was a problem downloading your MAL list. Please try again later.</string>
    <string name="getting_episode_count">Getting your episode counts, please try again in a few seconds.</string>
    <string name="permission_failed_write_external">You must grant Anime Buzz permission to write to your device\'s storage in order to export your MAL list.</string>
    <string name="permission_failed_read_external">You can grant Anime Buzz permission to read to your device\'s storage to find custom ringtones.</string>
    <string name="snackbar_export_success">Export successful.</string>
    <string name="dialog_no_external">No external storage was detected. Please try again when external storage is available.</string>
    <string name="export_limitation">Due to limitations of the MAL API, the following fields will not be included in your export file: <b>storage type, comments, and rewatch value</b>.</string>
    <string name="export_permission">External storage permissions are required to save your export file.</string>
    <string name="export_path">Your export files will be located in <b>\'Downloads/Anime Buzz - MAL Exports\'</b> on your device\'s storage.</string>
    <string name="export_details">A few things to note about your MAL list export file:</string>
    <string name="export_error">There was an error backing up your MAL list.</string>
    <string name="export_not_logged_in">You are not logged in to your MyAnimeList account.</string>
    <string name="last_app_version">lastappversion</string>
    <string name="update_episode_time">Updating episode release time</string>
    <string name="no_airing_time">No airing times available</string>
    <string name="airing_status_airing">Airing</string>
    <string name="airing_status_aired">Finished airing</string>
    <string name="airing_status_not_yet_aired">Not yet aired</string>
    <string name="failed_init_dialog_message">There was a problem getting anime data and airing times. This data must be downloaded before continuing, would you like to retry now or later?</string>
    <string name="failed_init_dialog_title">Failed getting initial data</string>
    <string name="import_dialog_message">Signed in! Do you want to add the anime currently in your list to your MAL list?</string>
    <string name="increment_dialog_message">Do you want to increment the episode count on MAL?</string>
    <string name="remove_series_dialog_message_logged_in">Are you sure you want to remove this from your list? (including your MAL list)</string>
    <string name="remove_series_dialog_message">Are you sure you want to remove this from your list?</string>
    <string name="sign_out_dialog_message">Are you sure you want to sign out from your MAL account?</string>
</resources>