<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_category_account_key"
        android:title="@string/pref_category_account_title">

        <me.jakemoritz.animebuzz.misc.AccountPreference
            android:summary="You are currently signed in."
            android:title="Sign out from your MAL account"
            android:layout="@layout/account_preference"/>

        <me.jakemoritz.animebuzz.misc.AccountPreference
            android:summary="You are currently signed out."
            android:title="Sign in to your MAL account"
            android:layout="@layout/account_preference" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_category_notifications_key"
        android:title="@string/pref_category_notifications_title">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_notification_key"
            android:title="@string/pref_notification_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_simulcast_key"
            android:summary="@string/pref_simulcast_off_summary"
            android:title="@string/pref_simulcast_title" />

        <me.jakemoritz.animebuzz.misc.CustomRingtonePreference
            android:key="@string/pref_ringtone_key"
            android:title="@string/pref_ringtone_title"
            android:showSilent="true"
            android:showDefault="true"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_vibrate_key"
            android:title="@string/pref_vibrate_title" />

        <ListPreference
            android:key="@string/pref_led_key"
            android:title="@string/pref_led_title"
            android:entries="@array/led_colors"
            android:entryValues="@array/led_colors_values" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_changed_time_notification_key"
            android:title="@string/pref_changed_time_notification_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_category_misc_key"
        android:title="@string/pref_category_misc_title">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_24hour_key"
            android:summary="@string/pref_24hour_summary"
            android:title="@string/pref_24hour_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_english_key"
            android:title="@string/pref_english_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_increment_key"
            android:summary="@string/pref_increment_summary"
            android:title="@string/pref_increment_title"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_firebase_key"
            android:summary="@string/pref_firebase_summary"
            android:title="@string/pref_firebase_title"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_category_other_key"
        android:title="@string/pref_category_other_title">

        <Preference
            android:key="@string/pref_changelog_key"
            android:title="@string/pref_changelog_title"/>

        <Preference
            android:key="@string/pref_privacy_policy_key"
            android:title="@string/pref_privacy_policy_title"/>
    </PreferenceCategory>
</PreferenceScreen>