<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_category_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_watching_queue"
            android:icon="@drawable/ic_assignment_late"
            android:title="@string/fragment_watching_queue" />
        <item
            android:id="@+id/nav_my_shows"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/fragment_myshows" />
        <item
            android:id="@+id/nav_seasons"
            android:icon="@drawable/ic_action_book"
            android:title="@string/fragment_seasons" />
    </group>

    <group
        android:id="@+id/nav_category_misc"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="About" />
    </group>

</menu>
