<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_height="400dp"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/mal_sign_in"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/mal_sign_in_text"
        android:textColor="#FFFFFF" />


    <RelativeLayout
        android:id="@+id/mal_sign_in_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mal_sign_in"
        android:layout_marginBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RelativeLayout
            android:id="@+id/username_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/label_username"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/label_username_text"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/edit_username"
                style="@style/Base.TextAppearance.AppCompat.Title"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/label_username"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:theme="@style/Theme.App.Base" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/username_container">

            <TextView
                android:id="@+id/label_password"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/label_password_text"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/edit_password"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/label_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:theme="@style/Theme.App.Base"

                android:paddingRight="45dp"/>

            <ImageView
                android:id="@+id/clear_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/edit_password"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_close"
                android:tint="@android:color/white"
                android:visibility="gone"/>


        </RelativeLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in" />

    </RelativeLayout>
</RelativeLayout>